--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0"/>
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection" content="telephone=no" />
-<title>北京大学王选所网络信息处理实验室</title>
+<title>Mingxu TAO</title>
 <link href="../../../css/icon.css" rel="stylesheet" type="text/css">
 <link href="../../../css/base.css" rel="stylesheet" type="text/css">
 <link href="../../../css/index.css" rel="stylesheet" type="text/css">
@@ -110,52 +110,6 @@
         </div>
 			</section>
 			<!--  for mobile [end] -->
-		</section>
-
-		<section class="topWrap clearfix">
-			<section class="mainWrap">
-        <span class="logo">
-          <a href="http://www.pku.edu.cn/" title="北京大学"><img src="../../../images/pkulogo_red.png"></a>
-          <a class="xkb_logo" href="../../../index.htm" title="网络信息处理实验室">王选计算机研究所<br>网络信息处理实验室</a>
-        </span>
-      </section>
-
-			<section class="nav yahei clearfix noMobileShow" style="clear:both;">
-			  <ul id="nav" style="list-style-type:none;">
-                                                              <li class="nav_first">
-                  <a href="../../index.htm">实验室概况</a>
-                  <ul class="sub-nav">
-                                          <li><a href="../../jj/index.htm">简介</a></li>
-                                          <li><a href="../index.htm">小组成员</a></li>
-                                      </ul>
-                </li>
-                                                                                                <li>
-                    <a href="../../../sysdt/index.htm">实验室动态</a>
-                    <ul class="sub-nav">
-                                              <li><a href="../../../sysdt/yjjz/index.htm">研究进展</a></li>
-                                              <li><a href="../../../sysdt/xzbg/index.htm">学术报告</a></li>
-                                          </ul>
-                  </li>
-                                                                                                                <li>
-                    <a href="../../../jxyyj/index.htm">教学与研究</a>
-                    <ul class="sub-nav">
-                                              <li><a href="../../../jxyyj/kskc/index.htm">开设课程</a></li>
-                                              <li><a href="../../../jxyyj/yjgs/index.htm">研究概述</a></li>
-                                              <li><a href="../../../jxyyj/hjqk/index.htm">获奖情况</a></li>
-                                              <li><a href="../../../jxyyj/lwlb/index.htm">论文列表</a></li>
-                                          </ul>
-                  </li>
-                                                                                                                <li>
-                    <a href="../../../zpxx/index.htm">招聘信息</a>
-                    <ul class="sub-nav">
-                                              <li><a href="../../../zpxx/jsbshzp/index.htm">教师、博士后招聘</a></li>
-                                              <li><a href="../../../zpxx/sxjk/index.htm">实习机会</a></li>
-                                          </ul>
-                  </li>
-                                                                                                                <li><a href="../../../lxwm/index.htm">联系我们</a></li>
-                                                                                                                <li><a href="../../../demo/index.htm">Demo</a></li>
-                                                    				</ul>
-			</section>
 		</section>
 	</section></header>
 <div class="main-body">
