--- a/index.html
+++ b/index.html
@@ -245,10 +245,7 @@ $(function(){
   
 
   <section class="fot_bot" >
-    <span class="copyright">版权所有&copy;北京大学王选计算机研究所</span>
-    <span class="addr">地址：北京市海淀区中关村北大街128号</span>
-  <span class="postcode">邮编：100080</span> 
-    <!--  <span class="tech-sup">Email：gjsjdbgroup@pku.edu.cn</span>-->
+    <span class="addr">Copyright by Mingxu Tao</span>
   </section></footer>
 
 <script src="../../../js/jquery-1.9.1.min.js" type="text/javascript"></script>
