--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 
 
         <section class="fot_bot">
+            <span class="copyright">Copyright by Mingxu Tao</span>
+            <span class="addr">Address: No.5 Yiheyuan Road, Haidian, Beijing, China</span>
+            <span class="postcode">100871</span>
             <span class="addr">Copyright by Mingxu Tao</span>
         </section>
     </footer>
