--- a/index.html
+++ b/index.html
@@ -64,19 +64,7 @@
                 </section>
                 <section class="mainWrap mainWrap02 noline">
                     <ul class="subNavRight" style="list-style-type:none;">
-                        <li><a href="../../../lxwm/index.htm">联系我们</a></li>
-                        <li><a href="http://www.wict.pku.edu.cn/ ">王选所</a></li>
-                        <li><a href="https://portal.pku.edu.cn/">校内门户</a></li>
-                        <li><a href="https://its.pku.edu.cn/">网络服务</a></li>
-                        <li><a href="http://pkunews.pku.edu.cn/">北大新闻</a></li>
                         <li><a href="../../../english/index.htm">English</a></li>
-                        <li id="form_Search_itme">
-                            <form id="form_Search" name="formSearch" method="get" action="" target="_blank" class="search">
-                                <input id="form_Searchword" name="word" class="inp" onFocus="" onBlur="" type="text">
-                                <a id="form_Search_a" href="javascript:document.forms['formSearch'].submit();" class="glyphicon glyphicon-search btn searchlogo" style="font-size:12px;">
-                                </a>
-                            </form>
-                        </li>
                     </ul>
                 </section>
                 <!-- search -->
@@ -95,7 +83,7 @@
                             <h2>陶铭绪</h2>
                         </div>
                         <div class="article">
-                            <p><img class="left" src="../../../images/content/2023-03/20230321215451660313.jpeg" style="width: 200px; height: 267px;" /></p>
+                            <p><img class="left" src="./tmx.png" style="width: 200px; height: 267px;" /></p>
 
                             <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">北京大学&nbsp;</span></span></p>
 
