--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                             <h2>陶铭绪</h2>
                         </div>
                         <div class="article">
+                            <p align="center"><h1>Mingxu TAO</h1></p>
+                            <p align="center"><h4>mailto: thomastao [at] pku [dot] edu [dot] cn</h4></p>
+
                             <p><img class="left" src="./tmx.png" style="width: 200px; height: 267px;" /></p>
 
                             <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">北京大学&nbsp;</span></span></p>
