--- a/index.html
+++ b/index.html
@@ -79,22 +79,25 @@
             <div class="col_lg_7 col_md_7">
                 <div class="mainContent">
                     <div class="pageArticle">
-                        <div class="articleTitle">
-                            <h2>陶铭绪</h2>
-                        </div>
                         <div class="article">
                             <p align="center"><h1>Mingxu TAO</h1></p>
                             <p align="center"><h4>mailto: thomastao [at] pku [dot] edu [dot] cn</h4></p>
 
-                            <p><img class="left" src="./tmx.png" style="width: 200px; height: 267px;" /></p>
+                            <p><img class="left" src="./tmx.png" style="width: 200px; height: 200px;" /></p>
 
-                            <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">北京大学&nbsp;</span></span></p>
+                            <p>
+                                <span style="font-family: Roboto, sans-serif;">
+                                    <span style="font-size: 20px;">
+                                    I am now a fourth-year PhD candidate at Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, 
+                                    </span>
+                                </span>
+                            </p>
 
-                            <p><span style="font-size:20px;"><span style="font-family:黑体;">前沿交叉学科研究院</span></span></p>
+                            <!--<p><span style="font-size:20px;"><span style="font-family:黑体;">前沿交叉学科研究院</span></span></p>
 
                             <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">数据科学专业</span></span></p>
 
-                            <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">博士研究生</span></span></p>
+                            <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">博士研究生</span></span></p>-->
 
                             <p>&nbsp;</p>
 
