--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
     <title>Mingxu TAO</title>
-    <link href="../../../css/icon.css" rel="stylesheet" type="text/css">
-    <link href="../../../css/base.css" rel="stylesheet" type="text/css">
-    <link href="../../../css/index.css" rel="stylesheet" type="text/css">
-    <link href="../../../css/En/inner.css" rel="stylesheet" type="text/css">
-    <link href="../../../css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="./css/icon.css" rel="stylesheet" type="text/css">
+    <link href="./css/base.css" rel="stylesheet" type="text/css">
+    <link href="./css/index.css" rel="stylesheet" type="text/css">
+    <link href="./css/En/inner.css" rel="stylesheet" type="text/css">
+    <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!--[if lt IE 9]>
         <script src="../../../js/html5.js" type="text/javascript"></script>
