--- a/index.html
+++ b/index.html
@@ -75,16 +75,18 @@
     </header>
     <div class="main-body">
         <div class="content">
-            <div class="col_lg_10 top">
+            <div class="col_lg_10 top"></div>
+            <div class="col_lg_10">
                 <p align="center">
                     <span style="font-family: sans-serif;">
                         <span style="font-size: 32px;">
                             Mingxu TAO
                         </span>
                     </span>
-                    <br />
+                </p>
+                <p align="center">
                     <span style="font-family: sans-serif;">
-                        <span style="font-size: 12px;">
+                        <span style="font-size: 16px;">
                             mailto: thomastao [at] pku [dot] edu [dot] cn
                         </span>
                     </span>
@@ -103,7 +105,7 @@
 
                             <p>
                                 <span style="font-family: sans-serif;">
-                                    <span style="font-size: 12px;">
+                                    <span style="font-size: 16px;">
                                     I am now a fourth-year PhD candidate at Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, 
                                     </span>
                                 </span>
