--- a/index.html
+++ b/index.html
@@ -92,30 +92,32 @@
                     </span>
                 </p>
             </div>
-            
+
+            <div class="col_lg_10 top"></div>
+
             <div class="col_lg_3 col_md_3">
-                <p><img class="left" src="./tmx.png" style="width: 200px; height: 200px;" /></p>
+                <p><img class="center" src="./tmx.png" style="width: 200px; height: 200px;" /></p>
             </div>
             <div class="col_lg_7 col_md_7">
                 <div class="mainContent">
                     <div class="pageArticle">
                         <div class="article">
 
-                            
+
 
                             <p>
                                 <span style="font-family: sans-serif;">
                                     <span style="font-size: 16px;">
-                                    I am now a fourth-year PhD candidate at Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, 
+                                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
                                     </span>
                                 </span>
                             </p>
 
                             <!--<p><span style="font-size:20px;"><span style="font-family:黑体;">前沿交叉学科研究院</span></span></p>
 
-                            <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">数据科学专业</span></span></p>
+                    <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">数据科学专业</span></span></p>
 
-                            <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">博士研究生</span></span></p>-->
+                    <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">博士研究生</span></span></p>-->
 
                             <p>&nbsp;</p>
 
