--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
             <div class="col_lg_10 top"></div>
 
             <div class="col_lg_3 col_md_3">
-                <p><img class="center" src="./tmx.png" style="width: 200px; height: 200px;" /></p>
+                <p style="text-align: center;">
+                    <img class="center" src="./tmx.png" style="width: 200px; height: 200px;" />
+                </p>
             </div>
             <div class="col_lg_7 col_md_7">
                 <div class="mainContent">
                     <div class="pageArticle">
                         <div class="article">
 
-
-
                             <p>
                                 <span style="font-family: sans-serif;">
                                     <span style="font-size: 16px;">
-                                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
+                                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO. I received my B.Sc. from the School of Electronic Engineering and Computer Science, Peking University in 2020. I also received my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                     </span>
                                 </span>
                             </p>
