--- a/index.html
+++ b/index.html
@@ -78,14 +78,15 @@
             <div class="col_lg_10 top"></div>
             <div class="col_lg_10">
                 <p align="center">
-                    <span style="font-family: sans-serif;">
+                    <span style="font-family: Titillium Web;">
                         <span style="font-size: 32px;">
                             Mingxu TAO
                         </span>
                     </span>
                 </p>
+                <br />
                 <p align="center">
-                    <span style="font-family: sans-serif;">
+                    <span style="font-family: Titillium Web;">
                         <span style="font-size: 16px;">
                             mailto: thomastao [at] pku [dot] edu [dot] cn
                         </span>
@@ -106,7 +107,7 @@
                         <div class="article">
 
                             <p>
-                                <span style="font-family: sans-serif;">
+                                <span style="font-family: Titillium Web;">
                                     <span style="font-size: 16px;">
                                         I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO. I received my B.Sc. from the School of Electronic Engineering and Computer Science, Peking University in 2020. I also received my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                     </span>
