--- a/index.html
+++ b/index.html
@@ -11,40 +11,42 @@
     <link href="./css/base.css" rel="stylesheet" type="text/css">
     <link href="./css/index.css" rel="stylesheet" type="text/css">
     <link href="./css/En/inner.css" rel="stylesheet" type="text/css">
-    <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!--<link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
 
     <!--[if lt IE 9]>
         <script src="./js/html5.js" type="text/javascript"></script>
         <script src="./js/response.min.js"></script>
     <![endif]-->
-    <script type="text/javascript">var browser={
-	    versions:function(){
-	        var u = navigator.userAgent, app = navigator.appVersion;
-	        return {//移动终端浏览器版本信息
-	            trident: u.indexOf('Trident') > -1, //IE内核
-	            presto: u.indexOf('Presto') > -1, //opera内核
-	            webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
-	            gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
-	            mobile: !!u.match(/AppleWebKit.*Mobile.*/)||u.indexOf('iPad') > -1, //是否为移动终端
-	            ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
-	            android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
-	            iPhone: u.indexOf('iPhone') > -1, //是否为iPhone或者QQHD浏览器
-	            iPad: u.indexOf('iPad') > -1, //是否iPad
-	            webApp: u.indexOf('Safari') == -1 //是否web应该程序，没有头部与底部
-	        };
-	    }(),
-	}
-	if(browser.versions.android || browser.versions.iPhone){
-		var url = document.location.href ;
-		var ext = url.substr(url.lastIndexOf("."),url.length) ;
-		if(ext != null && (ext == '.htm' || ext == '.html')){
-			url = url.substr(0,url.lastIndexOf(".")) ;
-			url = url + "_mobile" + ext ;
-		}else{
-			url = url + "index_mobile.htm" ;
-		}
-		document.location = url ;
-	}</script>
+    <script type="text/javascript">
+    var browser = {
+            versions: function () {
+                var u = navigator.userAgent, app = navigator.appVersion;
+                return {//移动终端浏览器版本信息
+                    trident: u.indexOf('Trident') > -1, //IE内核
+                    presto: u.indexOf('Presto') > -1, //opera内核
+                    webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
+                    gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
+                    mobile: !!u.match(/AppleWebKit.*Mobile.*/) || u.indexOf('iPad') > -1, //是否为移动终端
+                    ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
+                    android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
+                    iPhone: u.indexOf('iPhone') > -1, //是否为iPhone或者QQHD浏览器
+                    iPad: u.indexOf('iPad') > -1, //是否iPad
+                    webApp: u.indexOf('Safari') == -1 //是否web应该程序，没有头部与底部
+                };
+            }(),
+        }
+        if (browser.versions.android || browser.versions.iPhone) {
+            var url = document.location.href;
+            var ext = url.substr(url.lastIndexOf("."), url.length);
+            if (ext != null && (ext == '.htm' || ext == '.html')) {
+                url = url.substr(0, url.lastIndexOf("."));
+                url = url + "_mobile" + ext;
+            } else {
+                url = url + "index_mobile.htm";
+            }
+            document.location = url;
+        }</script>
 </head>
 
 <body>
@@ -78,7 +80,7 @@
             <div class="col_lg_10 top"></div>
             <div class="col_lg_10">
                 <p align="center">
-                    <span style="font-family: Titillium Web;">
+                    <span>
                         <span style="font-size: 32px;">
                             Mingxu TAO
                         </span>
@@ -86,7 +88,7 @@
                 </p>
                 <br />
                 <p align="center">
-                    <span style="font-family: Titillium Web;">
+                    <span>
                         <span style="font-size: 16px;">
                             mailto: thomastao [at] pku [dot] edu [dot] cn
                         </span>
@@ -107,7 +109,7 @@
                         <div class="article">
 
                             <p>
-                                <span style="font-family: Titillium Web;">
+                                <span>
                                     <span style="font-size: 16px;">
                                         I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO. I received my B.Sc. from the School of Electronic Engineering and Computer Science, Peking University in 2020. I also received my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                     </span>
