--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                             <p>
                                 <span>
                                     <span style="font-size: 16px;">
-                                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO. I received my B.Sc. from the School of Electronic Engineering and Computer Science, Peking University in 2020. I also received my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
+                                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO. I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                     </span>
                                 </span>
                             </p>
