--- a/index.html
+++ b/index.html
@@ -109,58 +109,44 @@
                         <div class="article">
 
                             <p>
-                                <span>
-                                    <span style="font-size: 16px;">
-                                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO. I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
-                                    </span>
+                                <span style="font-size: 16px;">
+                                    I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
+                                </span>
+                                <br />
+                                <span style="font-size: 16px;">
+                                    I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
+                                </span>
+                                <br />
+                                <span style="font-size: 16px;">
+                                    My research interests are the interpretability of Large Language Models and fact-driven reasoning with LLMs.
                                 </span>
                             </p>
-
-                            <!--<p><span style="font-size:20px;"><span style="font-family:黑体;">前沿交叉学科研究院</span></span></p>
-
-                    <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">数据科学专业</span></span></p>
-
-                    <p><span style="font-family: 微软雅黑;"><span style="font-size: 20px;">博士研究生</span></span></p>-->
-
-                            <p>&nbsp;</p>
-
-                            <p style="margin-left: 2em;">&nbsp;</p>
-
-                            <div>
-                                <div class="document">
-                                    <div class="section">
-                                        <p class="paragraph text-align-type-left" style="margin: 4px 0pt; font-family: 等线; font-size: 12pt; line-height: 16px;"><span data-font-family="&quot;Microsoft YaHei&quot;" style="font-size: 12pt; font-family: &quot;Microsoft YaHei&quot;; letter-spacing: 0pt; vertical-align: baseline;">&nbsp; &nbsp; &nbsp;</span></p>
-
-                                        <div>
-                                            <div class="document">
-                                                <div class="section">
-                                                    <p class="paragraph text-align-type-left" style="margin: 4px 0pt; font-family: 等线; font-size: 12pt; line-height: 16px;">&nbsp;</p>
-
-                                                    <p>陶铭绪于2020年毕业于北京大学信息科学技术学院，获得计算机科学与技术专业理学学士学位、国家发展研究院经济学双学士学位。目前与北京大学前沿交叉学科研究院攻读数据科学专业博士学位。</p>
-
-                                                    <p>研究兴趣</p>
-
-                                                    <p>基于大规模预训练语言模型的高效微调和连续学习。</p>
-
-                                                    <p>联系方式</p>
-
-                                                    <p><a href="mailto:thomastao@pku.edu.cn">thomastao@pku.edu.cn</a></p>
-
-                                                    <p>业余爱好</p>
-
-                                                    <p>赛艇、冰壶、速度滑冰、公路骑行</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="clearfix"></div>
+
+            <div class="col_lg_10 top"></div>
+
+            <div class="col_lg_10">
+                <h2>News</h2>
+                <p>
+                    <span style="font-size: 16px;">
+                        I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
+                    </span>
+                    <br />
+                    <span style="font-size: 16px;">
+                        I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
+                    </span>
+                    <br />
+                    <span style="font-size: 16px;">
+                        My research interests are the interpretability of Large Language Models and fact-driven reasoning with LLMs.
+                    </span>
+                </p>
+            </div>
+
+            <div class="col_lg_10 top"></div>
+            <!--<div class="clearfix"></div>-->
         </div>
     </div>
 
