--- a/index.html
+++ b/index.html
@@ -112,11 +112,13 @@
                                 <span style="font-size: 16px;">
                                     I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
                                 </span>
-                                <br />
+                            </p>
+                            <p>
                                 <span style="font-size: 16px;">
                                     I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                 </span>
-                                <br />
+                            </p>
+                            <p>
                                 <span style="font-size: 16px;">
                                     My research interests are the interpretability of Large Language Models and fact-driven reasoning with LLMs.
                                 </span>
@@ -126,6 +128,7 @@
                 </div>
             </div>
 
+            <div class="clearfix"></div>
             <div class="col_lg_10 top"></div>
 
             <div class="col_lg_10">
