--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
                     <div class="pageArticle">
                         <div class="article">
 
-                            <p>
+                            <p style="line-height: 2em;">
                                 <span style="font-size: 16px;">
                                     I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
                                 </span>
                             </p>
                             <br />
-                            <p>
+                            <p style="line-height: 2em;">
                                 <span style="font-size: 16px;">
                                     I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                 </span>
                             </p>
                             <br />
-                            <p>
+                            <p style="line-height: 2em;">
                                 <span style="font-size: 16px;">
                                     My research interests are the interpretability of Large Language Models and fact-driven reasoning with LLMs.
                                 </span>
@@ -135,7 +135,7 @@
 
             <div class="col_lg_10">
                 <h2>News</h2>
-                <p>
+                <p style="line-height: 2em;">
                     <ul>
                         <li><strong>[Aug. 2023]</strong> Our paper on better finetuning strategy of absolute position embedding got accepted by NLPCC 2023!</li>
                         <li><strong>[May 2023]</strong> We released the first open-source Large Language Model in the legal domain!</li>
