--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <div class="col_lg_10 top"></div>
 
             <div class="col_lg_10">
-                <h2>News</h2>
-                <p style="line-height: 3em;">
+                <sectionheading>News</sectionheading>
+                <p style="line-height: 2em;">
                     <ul>
                         <li><strong>[Aug. 2023]</strong> Our paper on better finetuning strategy of absolute position embedding got accepted by NLPCC 2023!</li>
                         <li><strong>[May 2023]</strong> We released the first open-source Large Language Model in the legal domain!</li>
