--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
                     <div class="pageArticle">
                         <div class="article">
 
-                            <p style="line-height: 2em;">
+                            <p style="line-height: 1.25em;">
                                 <span style="font-size: 16px;">
                                     I am now a fourth-year PhD candidate at Center for Data Science &amp; Wangxuan Institute of Computer Technology&nbsp;(WICT) of Peking University, supervised by Prof. Yansong FENG and Prof. Dongyan ZHAO.
                                 </span>
                             </p>
                             <br />
-                            <p style="line-height: 2em;">
+                            <p style="line-height: 1.25em;">
                                 <span style="font-size: 16px;">
                                     I received my B.Sc. from the School of EECS and my B.Soc.Sc. in Economics from the National School of Development, Peking University in 2020.
                                 </span>
                             </p>
                             <br />
-                            <p style="line-height: 2em;">
+                            <p style="line-height: 1.25em;">
                                 <span style="font-size: 16px;">
                                     My research interests are the interpretability of Large Language Models and fact-driven reasoning with LLMs.
                                 </span>
@@ -137,11 +137,27 @@
                 <sectionheading>News</sectionheading>
                 <p style="line-height: 2em;">
                     <ul>
-                        <li><strong>[Aug. 2023]</strong> Our paper on better finetuning strategy of absolute position embedding got accepted by NLPCC 2023!</li>
-                        <li><strong>[May 2023]</strong> We released the first open-source Large Language Model in the legal domain!</li>
-                        <li><strong>[Jan. 2023]</strong> Our paper on interpretability of lifelong learning in pre-trained language models got accepted by ICLR 2023!</li>
+                        <li><strong>[Nov. 2023]</strong> We released the largest corpus of minority languages in China to date! [<a href="https://arxiv.org/pdf/2311.08348.pdf" target="_blank">Paper</a>]</li>
+                        <li><strong>[Aug. 2023]</strong> Our paper on better finetuning strategy of absolute position embedding got accepted by NLPCC 2023! [<a href="https://arxiv.org/abs/2305.04859" target="_blank">Paper</a>]</li>
+                        <li><strong>[May 2023]</strong> We released the first open-source Large Language Model in the legal domain! [<a href="https://arxiv.org/abs/2305.15062" target="_blank">Paper</a>]</li>
+                        <li><strong>[Jan. 2023]</strong> Our paper on interpretability of lifelong learning in pre-trained language models got accepted by ICLR 2023! [<a href="https://openreview.net/forum?id=UazgYBMS9-W" target="_blank">Paper</a>]</li>
                     </ul>
                 </p>
+            </div>
+
+            <div class="clearfix"></div>
+            <div class="col_lg_10 top"></div>
+
+            <div class="col_lg_10">
+                <sectionheading>Internship Experience</sectionheading>
+                <p style="line-height: 1.25em;">
+                    <heading>Kuaishou&nbsp;(Beijing Dajia Internet Information Technology Co., Ltd.)</heading>
+                    <br />
+                    <b>Research Intern</b>
+                    <br />
+                    <i>Aug. 2023 -- Now</i>
+                </p>
+                <br />
             </div>
 
             <div class="col_lg_10 top"></div>
@@ -153,9 +169,9 @@
 
 
         <section class="fot_bot">
-            <span class="copyright">Copyright by Mingxu Tao</span>
-            <span class="addr">Address: No.5 Yiheyuan Road, Haidian, Beijing, China</span>
-            <span class="postcode">100871</span>
+            <span class="copyright"></span>
+            <span class="addr">Copyright by Mingxu Tao</span>
+            <span class="postcode"></span>
         </section>
     </footer>
 
