--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 
             <div class="col_lg_10">
                 <sectionheading>News</sectionheading>
+                <br />
                 <p style="line-height: 2em;">
                     <ul>
                         <li><strong>[Nov. 2023]</strong> We released the largest corpus of minority languages in China to date! [<a href="https://arxiv.org/pdf/2311.08348.pdf" target="_blank">Paper</a>]</li>
@@ -150,6 +151,7 @@
 
             <div class="col_lg_10">
                 <sectionheading>Internship Experience</sectionheading>
+                <br />
                 <p style="line-height: 1.25em;">
                     <heading>Kuaishou&nbsp;(Beijing Dajia Internet Information Technology Co., Ltd.)</heading>
                     <br />
@@ -169,9 +171,9 @@
 
 
         <section class="fot_bot">
-            <span class="copyright"></span>
+            <span class="copyright">&nbsp;</span>
             <span class="addr">Copyright by Mingxu Tao</span>
-            <span class="postcode"></span>
+            <span class="postcode">&nbsp;</span>
         </section>
     </footer>
 
