--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
                 <br />
             </div>
 
+            <div class="clearfix"></div>
+            <div class="col_lg_10 top"></div>
+
             <div class="col_lg_10">
                 <sectionheading>Awards &amp; Honors</sectionheading>
                 <br /><br />
