--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
                 <p style="line-height: 2em;">
                     <ul>
                         <li><strong>NLPCC Reviewer:</strong> 2021-2023</li>
+                        <li><strong>ACL Reviewer:</strong> 2023</li>
                         <li><strong>COLING Reviewer:</strong> 2023</li>
                         <li><strong>EMNLP Reviewer:</strong> 2023</li>
                     </ul>
